--- a/html/login.html
+++ b/html/login.html
@@ -17,8 +17,9 @@
 </head>
 <body>
     
-    <div class="wrap">
+    <div class="wrap2">
         <div class="join-wrap">
+            <p class="phrase">함께 걸어요 My5k</p>
             <h2>로그인</h2>
             <ul>
                 <li>
@@ -34,14 +35,17 @@
                 </li>
                 
             </ul>
-            <div class="align both">
+            <div class="align both pt35 pb12">
                 <div>
                     <input type="checkbox">
                     <label for="">아이디 저장</label>
                 </div>
-                <a class="link" href="#none">계정 찾기</a>
+                <div>
+                    <a class="link" href="#none">계정 찾기</a>
+                    <a class="link red ml24" href="#none">회원가입</a>
+                </div>
             </div>
-            <button class="btn-main" type="button">가입하기</button>
+            <button class="btn-main" type="button">로그인</button>
         </div>
     </div>
 </body>
