--- a/html/header.html
+++ b/html/header.html
@@ -1,8 +1,8 @@
 <nav class="nav-b">
-    <a href="./devsisters.html">My5K</a>
+    <a class="logo" href="index.html">My5K</a>
     <ul>
-        <li class="list"><a href="./about.html">2024 My5k</a></li>
-        <li class="list"><a href="./kingdom.html">행사 후원</a></li>
+        <li class="list"><a href="#none">2024 My5k</a></li>
+        <li class="list"><a href="#none">행사 후원</a></li>
     </ul>
     <a class="burger-ic"><span class="material-symbols-outlined"> menu</span></a>
     <a class="btn-login align vm" href="login.html"><img class="mr6" src="../img/main/ico_login.svg" alt="">로그인</a>
@@ -13,8 +13,9 @@
         <a class="close">x</a>
     </div>
     <div class="burger-list">
-        <a href="./about.html">My5k</a>
-        <a href="./kingdom.html">행사 후원</a>
+        <a href="index.html">My5k</a>
+        <a href="#none">행사 후원</a>
+        <a href="login.html">로그인</a>
     </div>
 </article>
 <script>
