--- a/html/footer.html
+++ b/html/footer.html
@@ -2,7 +2,7 @@
 <div class="inner">
     <div class="ft1 align both">
         <div class="align vm">
-            <h1><a href="index.html"><img src="../img/main/logo_foot.svg" alt=""></a></h1>
+            <h1><a class="logo" href="index.html"><img src="../img/main/logo_foot.svg" alt=""></a></h1>
             <div class="align vm ml24">
                 <p class="text1">월-금</p>
                 <p class="ml4 text2">10:00-18:00(주말, 공휴일 휴무)</p>
@@ -19,24 +19,38 @@
     <div class="ft2 pt26 align both vm">
         <div>
             <div class="align vm pb10">
-                <p class="text1">상호</p>
-                <p class="ml4 text2">NCMN</p>
-                <p class="ml16 text1">대표</p>
-                <p class="ml4 text2">한문희</p>
+                <div class="align">
+                    <p class="text1">상호</p>
+                    <p class="ml4 text2">NCMN</p>
+                </div>
+                <div class="align">
+                    <p class="ml16 text1">대표</p>
+                    <p class="ml4 text2">한문희</p>
+                </div>
             </div>
             <div class="align vm pb10">
-                <p class="text1">사업자 등록 번호</p>
-                <p class="ml4 text2">492-82-00068</p>
-                <p class="ml16 text1">통신판매업 신고 번호</p>
-                <p class="ml4 text2">2022-서울영등포-0623</p>
+                <div class="align">
+                    <p class="text1">사업자 등록 번호</p>
+                    <p class="ml4 text2">492-82-00068</p>
+                </div>
+                <div class="align">
+                    <p class="ml16 text1">통신판매업 신고 번호</p>
+                    <p class="ml4 text2">2022-서울영등포-0623</p>
+                </div>
             </div>
             <div class="align vm">
-                <p class="text1">주소</p>
-                <p class="ml4 text2">서울특별시 영등포구 선유로 202 NCMN</p>
-                <p class="ml16 text1">FAX</p>
-                <p class="ml4 text2">02-595-3305</p>
-                <p class="ml16 text1">계좌번호</p>
-                <p class="ml4 text2">신한은행 140012482765</p>
+                <div class="align">
+                    <p class="text1">주소</p>
+                    <p class="ml4 text2">서울특별시 영등포구 선유로 202 NCMN</p>
+                </div>
+                <div class="align">
+                    <p class="ml16 text1">FAX</p>
+                    <p class="ml4 text2">02-595-3305</p>
+                </div>
+                <div class="align">
+                    <p class="ml16 text1">계좌번호</p>
+                    <p class="ml4 text2">신한은행 140012482765</p>
+                </div>
             </div>
         </div>
         <div class="tel">
