--- a/html/footer.html
+++ b/html/footer.html
@@ -61,10 +61,10 @@
     <div class="ft3 align both vm">
         <p>COPYRIGHT ⓒ NCMN ALL RIGHTS RESERVED.</p>
         <ul class="align sns">
-            <li><a href="#none"><img src="../img/main/ico_facebook.svg" alt=""></a></li>
-            <li><a href="#none"><img src="../img/main/ico_insta.svg" alt=""></a></li>
-            <li><a href="#none"><img src="../img/main/ico_blog.svg" alt=""></a></li>
-            <li><a href="#none"><img src="../img/main/ico_youtube.svg" alt=""></a></li>
+            <li><a href="#none" onclick="alert('준비중입니다')"><img src="../img/main/ico_facebook.svg" alt=""></a></li>
+            <li><a href="#none" onclick="alert('준비중입니다')"><img src="../img/main/ico_insta.svg" alt=""></a></li>
+            <li><a href="#none" onclick="alert('준비중입니다')"><img src="../img/main/ico_blog.svg" alt=""></a></li>
+            <li><a href="#none" onclick="alert('준비중입니다')"><img src="../img/main/ico_youtube.svg" alt=""></a></li>
         </ul>
     </div>
 </div>  
