--- a/html/footer.html
+++ b/html/footer.html
@@ -11,9 +11,9 @@
             </div>
         </div>
         <ul class="align vm list">
-            <li><a href="#none">개인정보처리방침</a></li>
-            <li><a href="#none">이용약관</a></li>
-            <li><a href="#none">제휴 안내</a></li>
+            <li><a href="#none" onclick="alert('준비중입니다')">개인정보처리방침</a></li>
+            <li><a href="#none" onclick="alert('준비중입니다')">이용약관</a></li>
+            <li><a href="#none" onclick="alert('준비중입니다')">제휴 안내</a></li>
         </ul>
     </div>
     <div class="ft2 pt26 align both vm">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="align">
                     <p class="ml16 text1">대표</p>
-                    <p class="ml4 text2">한문희</p>
+                    <p class="ml4 text2">김미진</p>
                 </div>
             </div>
             <div class="align vm pb10">
