--- a/html/index.html
+++ b/html/index.html
@@ -29,17 +29,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="../js/custom.js"></script>
     <script src="../js/about.js"></script>
+    <script src="../js/youtube.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
     <article class="m-video">
-        <video width="100%" height="850" autoplay muted loop poster="./image/04.jpg"> 
-            <source src="../img/about/1. about.mp4" type="video/mp4"></video>
+        <!-- <video width="100%" height="850" autoplay muted loop poster="./image/04.jpg"> 
+            <source src="../img/about/1. about.mp4" type="video/mp4"></video> -->
+            <div class="video-wrap">
+                <div class="youtubeWrap" data-url="0G45AFmbgL8">
+                    <iframe></iframe>
+                  </div>
+            </div>
     </article>
-    <article class="brave" data-aos="fade-in" data-aos-duration="1200" data-aos-delay="500"> 
+    <article class="brave" data-aos="fade-in" data-aos-duration="1200" data-aos-delay="500">
         <img src="../img/about/banner_txt.svg" alt="">
-        
     </article>
     <div class="wrap relative">
         <div class="m0auto space max-width">
