--- a/html/index.html
+++ b/html/index.html
@@ -37,52 +37,193 @@
     <article class="m-video">
         <!-- <video width="100%" height="850" autoplay muted loop poster="./image/04.jpg"> 
             <source src="../img/about/1. about.mp4" type="video/mp4"></video> -->
-            <div class="video-wrap">
-                <div class="youtubeWrap" data-url="0G45AFmbgL8">
+            <div class="video-wrap" style="overflow-x: hidden;">
+                <div class="youtubeWrap" data-url="0G45AFmbgL8" style="overflow-x: hidden;">
                     <iframe></iframe>
                   </div>
+                  <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/0G45AFmbgL8?si=Psbt_X4o3xDKyGGh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
             </div>
     </article>
+    <!-- <article class="m-video">
+        <div class="video-wrap">
+            <div class="youtubeWrap">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0G45AFmbgL8?si=Psbt_X4o3xDKyGGh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </article> -->
+    
     <article class="brave" data-aos="fade-in" data-aos-duration="1200" data-aos-delay="500">
         <img src="../img/about/banner_txt.svg" alt="">
     </article>
     <div class="wrap relative">
-        <div class="m0auto space max-width">
-            <div class="font-title" data-aos="fade-up" data-aos-duration="1200">Walk Together, My5K</div>
+        <div class="m0auto space max-width px16">
+            <div class="font-title" data-aos="fade-up" data-aos-duration="1200">MY5K</div>
             <div class="atc-con" data-aos="fade-up" data-aos-duration="1200">
-                <p class="text1">함께 걸어요 My5K는 내 주변 5Km를 변화시키자는 5K운동을 간접적으로 체험하고, ​널리 알리고자 하는 걷기 캠페인입니다.</p>
-                <p class="text2">2019년 시작되어 해마다 함께 걷고, 참가비 전액을 우리 주변의 절대필요가 있는 이웃을 돕는 데 사용합니다<br>
-                    My5K 캠페인에 참여한 모든 참가자들은 즐겁고 쉽게 이웃 돕기를 경험하며<br>
-                    내 주변 5Km를 돌아보자는 따뜻한 메시지를 알아갑니다.​</p>
+                <p class="text2">
+                    5km을 걸으며 이웃에게 사랑을 전하세요 <br>
+                    참가비 전액은 소외된 이웃을 돕는 데 사용됩니다. <br>
+                    작은 걸음이 큰 변화를 만듭니다.
+                </p>
             </div>
-            <div class="atc-con-list">
-                <div class="who">
-                    <div class="who-list" data-aos="fade-up" data-aos-duration="1500">
-                        <p>5K 운동의 시작</p>
-                        <p class="counter1"><span>SINCE</span><code class="counter1">2012</code></p>
-                    </div>
-                    <div class="who-list" data-aos="fade-up" data-aos-duration="1200">
-                        <p>국내 자원팀</p>
-                        <p class="counter1"><code class="counter2">1102</code><span>팀</span></p>
-                    </div>
-                    <div class="who-list" data-aos="fade-up" data-aos-duration="1200">
-                        <p>대한민국 전국에서 5K 활동</p>
-                        <p>8도 77개 <span>도시</span></p>
-                    </div>
-                    <div class="who-list" data-aos="fade-up" data-aos-duration="1200">
-                        <p>전세계 참여국</p>
-                        <p class="counter1"><code class="counter3">180</code><span>개국</span></p>
-                    </div>
-                </div>
+            <img src="../img/img_main01.png" alt="">
+        </div>
+        
+        <div class="m0auto space max-width px16">
+            <div class="font-title sub-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">MY5K 참가자만을 위해 준비된</div>
+            <div class="font-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">참가자 리워드</div>
+            <div class="atc-con aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">
+                <p class="text2">
+                    <span>티셔츠</span>와 <span>입장팔찌</span>는 행사 참여시에 꼭 착용해주세요<br>
+                    원활한 행사 참여를 위해 부탁드립니다 :)
+                </p>
+                <p class="sub-text">
+                    *구성품은 사진과 상이할 수 있습니다. 
+                </p>
             </div>
+            <div>
+                <ul class="list-reward">
+                    <li>
+                        <img src="../img/img_att_reward01.svg" alt="">  
+                        <div class="label">티셔츠</div>
+                        <div class="info">원사부터 원단,티셔츠 재단 및 제작까지 모두 국내 제작</div>
+                    </li>
+                    <li>
+                        <img src="../img/img_att_reward02.svg" alt="">  
+                        <div class="label">모자</div>
+                    </li>
+                    <li>
+                        <img src="../img/img_att_reward03.svg" alt="">  
+                        <div class="label">양말</div>
+                        <div class="info">삭스업 (free size)</div>
+                    </li>
+                    <li>
+                        <img src="../img/img_att_reward04.svg" alt="">  
+                        <div class="label">가방</div>
+                    </li>
+                    <li>
+                        <img src="../img/img_att_reward05.svg" alt="">  
+                        <div class="label">입장팔찌</div>
+                    </li>
+                    <li>
+                        <img src="../img/img_att_reward06.svg" alt="">  
+                        <div class="label">기부증서</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="font-title sub-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">현장에서는 더 많은 리워드가 빵빵!</div>
+            <div class="font-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">현장 리워드</div>
+            <ul>
+                <li>
+                    <img src="../img/img_reward01.svg" alt="">
+                    <div>완주메달</div>
+                </li>
+                <li>
+                    <img src="../img/img_reward02.svg" alt="">
+                    <div>에코백</div>
+                </li>
+                <li>
+                    <img src="../img/img_reward03.svg" alt="">
+                    <div>부스체험활동 및<br>>기업부스활동 상품</div>
+                </li>
+                <li>
+                    <img src="../img/img_reward04.svg" alt="">
+                    <div>푸드트럭 먹거리</div>
+                </li>
+            </ul>
         </div>
-        <div class="img-move2">
-            <img class="img-move" src="../img/main/move_walking2.gif" alt="">
-            <figure>
-                <img src="../img/main/banner_txt1.png" alt="">
-                <img src="../img/about/banner_txt1.png" alt="">
-            </figure>
+
+        <div class="m0auto space max-width px16">
+            <div class="font-title sub-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">2024 함께 걸어요 My5k 코스</div>
+            <div class="font-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">코스 안내</div>
+            <div class="atc-con aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">
+                <p class="sub-text">
+                    *자동차 도로를 지나는 코스가 많습니다.
+                    안전 및 원활한 진행을 위하여, 걷기 진행중에는 반드시 진행요원과 경찰의 지시에 따라주시기 바랍니다.
+                </p>
+            </div>
+
+            <img src="../img/img_main02.png" alt="">
         </div>
+
+        <div class="m0auto space max-width px16">
+            <div class="font-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">도착지(행사장) 안내</div>
+        </div>
+        <div class="m0auto space max-width px16">
+            <div class="font-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">프로그램 안내</div>
+            <ul>
+                <li>
+                    <img src="../img/img_program01.png" alt="">
+                    <div>
+                        <div>게임활동부스존</div>
+                        <div>함께하는 즐거움</div>
+                        <div>
+                            참가자들이 다양한 게임활동을 통해 My5K의 의미를 즐겁게 체험할 수 있는 특별한 공간입니다. 모든 활동은 쉽게 참여할 수 있도록 마련되어 있으며, 활동 이후에는 소소한 선물도 받아가실 수 있습니다. 함께하는 즐거움을 알아가며, My5K의 가치를 느껴보세요!
+                        </div>
+                        <div>
+                            입장 팔찌가 필요한 공간입니다. 각자 받으신 팔찌의 색상에 맞춰서  사랑/동행/변화/기적의 zone으로 이동하셔서 참여해주세요.
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="../img/img_program02.png" alt="">
+                    <div>
+                        <div>에어바운스 존_어린이 전용</div>
+                        <div>사랑의 점핑 월드</div>
+                        <div>
+                            아이들이 두 개의 대규모 에어바운스 시설(각각 42m x 8m)에서 신나게 뛰어놀 수 있는 특별한 공간입니다. 아이들에게도 다양한 점프 활동과 놀이를 통해 My5K의 특별한 사랑과 즐거움을 선사하세요!
+                        </div>
+                        <div>
+                            ※ 안전을 위해 미취학 아동과 아동용이 구분되어 있습니다. 입장 전 반드시 확인 부탁드립니다.
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="../img/img_program03.png" alt="">
+                    <div>
+                        <div>푸드존</div>
+                        <div>맛있는 쉼터</div>
+                        <div>
+                            참가자들이 My5K의 기쁨을 나눌 수 있도록, 간단하고 맛있는 음식을 제공합니다. 다양한 프로그램 참여에 앞서, 간식으로 든든히 몸과 마음을 채워보세요! 걷고 나서 배고플 참가자들을 위해 간편한 음식을 준비했습니다. My5K의 따뜻한 마음을 느끼며 즐거운 시간 보내세요!
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="../img/img_program04.png" alt="">
+                    <div>
+                        <div>기부대상 선정 존</div>
+                        <div>변화의 손길</div>
+                        <div>
+                            올해는 참가비 전액 기부의 수혜자를 참가들과 함께 정합니다. 행사장 중앙에 위치한 기부 대상 선정 존에서 여러분의 소중한 의견으로 변화를 만들어주세요. 참가자들의 따뜻한 마음을 모아 기부 대상을 선정하고 My5K의 특별한 나눔을 실천해보세요!
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="../img/img_program05.png" alt="">
+                    <div>
+                        <div>기업활동부스존</div>
+                        <div>기적의 파트너</div>
+                        <div>
+                            My5K의 사랑, 동행, 변화, 기적에 동참하는 기업들이 준비한 특별한 공간입니다. 각 기업은 우리의 선한 가치를 지지하며, 다양한 활동과 푸짐한 선물을 통해 참가자들과 함께하고자 합니다. 기적의 파트너와 함께 만들어가는 기적을 경험해보세요!
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="../img/img_program06.png" alt="">
+                    <div>
+                        <div>포토존</div>
+                        <div>기쁨의 순간</div>
+                        <div>
+                            행사장에 마련된 포토존에서 My5K의 즐거운 순간을 사진과 영상으로 남기고 소중한 추억을 만들어보세요. 아름답게 꾸며진 이 공간에서 친구와 가족과 함께 행복한 시간을 보낼 수 있습니다. 기쁨의 순간에서 특별한 기억을 오래도록 간직해보세요!
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="m0auto space max-width px16">
+            <div class="font-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">참가 신청</div>
+        </div>
+
         <div class="img-move3">
             <figure>
                 <img src="../img/main/banner_txt2.png" alt="">
@@ -94,8 +235,8 @@
         </div>
         <div class="m0auto space max-width">
             <div class="move-wrap mt420">
-                <img class="img-move" src="../img/main/move_walking1.gif" alt="">
-                <div class="font-title mt300" data-aos="fade-up" data-aos-duration="1200">우리는 5KM를 걷습니다.</div>
+                <!-- <img class="img-move" src="../img/main/move_walking1.gif" alt=""> -->
+                <div class="font-title mt300" data-aos="fade-up" data-aos-duration="1200">우리의 나눔은 동행입니다</div>
             </div>
         </div>
         <div class="m0auto space max-width">
