--- a/html/login.html
+++ b/html/login.html
@@ -19,14 +19,14 @@
     
     <div class="wrap2">
         <div class="join-wrap">
-            <p class="phrase">함께 걸어요 My5k</p>
+            <!-- <p class="phrase">함께 걸어요 My5k</p> -->
             <h2>로그인</h2>
+            <a id="kakaoLogin" class="btn_main btn_kakao bg_03" >카카오로 3초만에 시작하기</a>
             <ul>
                 <li>
                     <label class="label" for="">아이디</label>
-                    <div class="align">
+                    <div>
                         <input type="text" placeholder="아이디를 입력해주세요.">
-                        <button class="btn-sub" type="button">중복 확인</button>
                     </div>
                 </li>
                 <li>
