--- a/html/header.html
+++ b/html/header.html
@@ -1,8 +1,8 @@
 <nav class="nav-b">
-    <a class="logo" href="index.html">My5K</a>
+    <a class="logo" href="index.php">My5K</a>
     <ul>
         <li class="list"><a href="#none" onclick="alert('준비중입니다')">2024 My5k</a></li>
-        <li class="list"><a href="#none" onclick="alert('준비중입니다')">행사 후원</a></li>
+        <li class="list"><a href="#none" onclick="alert('준비중입니다')">유의사항</a></li>
     </ul>
     <a class="burger-ic"><span class="material-symbols-outlined"> menu</span></a>
     <!-- <a class="btn-login align vm" href="login.html"><img class="mr6" src="../img/main/ico_login.svg" alt="">로그인</a> -->
@@ -14,7 +14,7 @@
     </div>
     <div class="burger-list">
         <a href="#none" onclick="alert('준비중입니다')">2024 My5k</a>
-        <a href="#none" onclick="alert('준비중입니다')">행사 후원</a>
+        <a href="#none" onclick="alert('준비중입니다')">유의사항</a>
         <!-- <a href="login.html">로그인</a> -->
     </div>
 </article>
