--- a/html/header.html
+++ b/html/header.html
@@ -1,5 +1,5 @@
 <nav class="nav-b">
-    <a class="logo" href="index.php">My5K</a>
+    <a class="logo" href="index.php"><img src="../img/logo.svg" alt=""></a>
     <ul>
         <li class="list"><a href="#none" onclick="alert('준비중입니다')">2024 My5k</a></li>
         <li class="list"><a href="#none" onclick="alert('준비중입니다')">유의사항</a></li>
