--- a/html/login.html
+++ b/html/login.html
@@ -18,7 +18,7 @@
 <body>
     
     <div class="wrap2">
-        <div class="join-wrap">
+        <div class="input-wrap">
             <!-- <p class="phrase">함께 걸어요 My5k</p> -->
             <h2>로그인</h2>
             <a id="kakaoLogin" class="btn_main btn_kakao bg_03" >카카오로 3초만에 시작하기</a>
