--- a/html/header.html
+++ b/html/header.html
@@ -1,10 +1,15 @@
 <nav class="nav-b">
-    <a class="logo" href="index.php"><img src="../img/logo.svg" alt=""></a>
-    <ul>
-        <li class="list"><a href="#none" onclick="alert('준비중입니다')">2024 My5k</a></li>
-        <li class="list"><a href="#none" onclick="alert('준비중입니다')">유의사항</a></li>
-    </ul>
-    <a class="burger-ic"><span class="material-symbols-outlined"> menu</span></a>
+
+    <!-- <div class="align triple"> -->
+        <a class="logo" href="index.php"><img src="../img/logo.svg" alt=""></a>
+        <ul>
+            <li class="list"><a href="#none" onclick="alert('준비중입니다')">2024 My5k</a></li>
+            <li class="list"><a href="#none" onclick="alert('준비중입니다')">유의사항</a></li>
+        </ul>
+        <a class="burger-ic"><span class="material-symbols-outlined"> menu</span></a>
+        <div></div>
+    <!-- </div> -->
+
     <!-- <a class="btn-login align vm" href="login.html"><img class="mr6" src="../img/main/ico_login.svg" alt="">로그인</a> -->
 </nav>
 <article class="burger">
