--- a/html/join.html
+++ b/html/join.html
@@ -18,12 +18,12 @@
 <body>
     
     <div class="wrap">
-        <div class="join-wrap">
+        <div class="input-wrap">
             <h2>회원가입</h2>
             <ul>
                 <li>
                     <label class="label" for="">아이디</label>
-                    <div class="align">
+                    <div class="input-type2">
                         <input type="text" placeholder="아이디를 입력해주세요.">
                         <button class="btn-sub" type="button">중복 확인</button>
                     </div>
