--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,12 @@
     <!-- <script src="../js/youtube.js"></script> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- 오픈그래프 -->
+    <meta property="og:url" content="http://www.my5k.co.kr">
+    <meta property="og:title" content="My5k 2024 함께 걸어요 ">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="../img/open_graph.png">
+    <meta property="og:description" content="My5k 2024 함께걸어요 홈페이지 입니다.">
 </head>
 <body>
     <article class="m-video">
@@ -44,7 +50,7 @@
                 <!-- <div class="font-title" data-aos="fade-up" data-aos-duration="1200">MY5K</div> -->
                 <div class="atc-con pb86" data-aos="fade-up" data-aos-duration="1200">
                     <p class="text2">
-                        5km을 걸으며 이웃에게 사랑을 전하세요.<br>
+                        5km을 걸으며 이웃에게 사랑을 전하세요 <br>
                         참가비 전액은 소외된 이웃을 돕는 데 사용됩니다. <br>
                         작은 걸음이 큰 변화를 만듭니다.
                     </p>
@@ -53,7 +59,7 @@
             </div>
             <div class="atc-con pb38" data-aos="fade-up" data-aos-duration="1200">
                 <p class="text4 relative inline">
-                    2024년 10월 9일(수),<br>
+                    2024년 10월 9일 수요일,<br>
                     서울시청광장<span>에서 출발합니다!</span>
                     <!-- <div class="gif-wrap"> -->
                         <img class="gif-move01" src="../img/move01.gif" alt="">
@@ -87,7 +93,7 @@
                             <span>
                                 11세 이하(2014.01.01 이후 출생)의 아동은 보호자 동반 시 무료 참가 가능합니다.<br>
                                 (무료 참가 시, 기프트 박스는 발송되지 않습니다.)<br>
-                                사전 신청해 주신 유·아동에게는 현장에서 티셔츠를 선물로 드립니다!
+                                사전 신청해 주신 유·아동에게는 현장에서 티셔츠를 선물로 드려요!
                             </span>
                         </div>
                     </div>
@@ -97,7 +103,7 @@
                         <h3>행사일시</h3>
                     </div>
                     <div>
-                        <strong class="fw600">2024년 10월 9일(수) 8:00~12:00</strong>
+                        <strong class="fw600">2024년 10월 9일(수) 8:30~12:00</strong>
                         <div>
                             <span>
                                 본 행사는 단체 출발하는 행사로 2개 차로를 확보하여 함께 걷는 행사입니다.<br>
@@ -120,7 +126,7 @@
                         <h3>코스</h3>
                     </div>
                     <div>
-                        <strong class="label1 fw600">서울시청 <img src="../img/ico_arrow_right.svg" alt=""> 숭례문 <img src="../img/ico_arrow_right.svg" alt=""> 서울역 <img src="../img/ico_arrow_right.svg" alt=""> 효창운동장</strong>
+                        <strong class="label1 fw600">서울시청 -> 숭례문 -> 서울역 -> 효창운동장</strong>
                     </div>
                 </li>
             </ul>
@@ -218,7 +224,7 @@
                 <div class="atc-con aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">
                     <p class="sub-text pb80">
                         *자동차 도로를 지나는 코스가 많습니다.<br>
-                        안전 및 원활한 진행을 위하여, 걷기 진행 중에는 반드시 진행요원과 경찰의 지시에 따라주시기 바랍니다.
+                        안전 및 원활한 진행을 위하여, 걷기 진행중에는 반드시 진행요원과 경찰의 지시에 따라주시기 바랍니다.
                     </p>
                 </div>
                 <img class="img-course" src="../img/img_main02.png" alt="">
@@ -286,23 +292,17 @@
                         <div class="label">기부대상 선정 zone</div>
                         <div class="list-program__title">기적의 손길</div>
                         <div class="list-program__desc">
-                            올해는 기부 수혜자를 참가자들과 함께 정합니다. 행사장 내 위치한<br>
-                            기부 대상 선정 zone에서 여러분의 소중한 의견으로 변화를 만들어<br>
-                            주세요. 참가자들의 따뜻한 마음을 모아 기부 대상을 선정하고 My5K<br>
-                            의 특별한 나눔을 실천해 보세요!
+                            올해는 기부의 수혜자를 참가들과 함께 정합니다. 행사장 내 위치한 기부 대상 선정 zone에서 여러분의 소중한 의견으로 변화를 만들어주세요. 참가자들의 따뜻한 마음을 모아 기부 대상을 선정하고 My5K의 특별한 나눔을 실천해 보세요!
                         </div>
                     </div>
                 </li>
                 <li data-aos="fade-up" data-aos-duration="1200">
                     <img src="../img/img_program05.png" alt="">
                     <div class="desc">
-                        <div class="label">기업활동 zone</div>
+                        <div class="label">기업활동부스 zone</div>
                         <div class="list-program__title">나눔의 파트너</div>
                         <div class="list-program__desc">
-                            My5K의 사랑, 동행, 변화, 기적에 동참하는 기업들이 준비한 특별한<br>
-                            공간입니다. 각 기업은 우리의 선한 가치를 지지하며, 다양한 활동과<br>
-                            푸짐한 선물을 통해 참가자들과 함께하고자 합니다. 기적의 파트너와<br> 
-                            함께 만들어가는 기적을 경험해 보세요!
+                            My5K의 사랑, 동행, 변화, 기적에 동참하는 기업들이 준비한 특별한  공간입니다. 각 기업은 우리의 선한 가치를 지지하며, 다양한 활동과  푸짐한 선물을 통해 참가자들과 함께하고자 합니다. 기적의 파트너와 함께 만들어가는 기적을 경험해 보세요!
                         </div>
                     </div>
                 </li>
@@ -312,10 +312,7 @@
                         <div class="label">포토 zone</div>
                         <div class="list-program__title">기쁨의 순간</div>
                         <div class="list-program__desc">
-                            행사장에 마련된 포토존에서 My5K의 즐거운 순간을 사진과 영상으로<br> 
-                            남기고 소중한 추억을 만들어 보세요. 아름답게 꾸며진 이 공간에서<br>
-                            친구와 가족과 함께 행복한 시간을 보낼 수 있습니다. 기쁨의 순간을<br>
-                            특별한 기억과 오래도록 간직해 보세요!
+                            행사장에 마련된 포토존에서 My5K의 즐거운 순간을 사진과 영상으로 남기고 소중한 추억을 만들어 보세요. 아름답게 꾸며진 이 공간에서 친구와 가족과 함께 행복한 시간을 보낼 수 있습니다. 기쁨의 순간에서 특별한 기억을 오래도록 간직해 보세요!
                         </div>
                     </div>
                 </li>
@@ -336,7 +333,7 @@
                                 나와 함께 모여서 참가할 때
                             </div> -->
                         </div>
-                        <div class="list-apply__caution pb50">※ 참가 신청 페이지에서 유의사항을 모두 확인하고 결제를 진행해 주세요.</div>
+                        <div class="list-apply__caution pb50">※ 참가 신청 페이지에서 유의사항을 모두 확인하고 결제를 진행해주세요.</div>
                     </div>
                     <button class="btn-apply" type="button">신청하기</button>
                 </li>
@@ -381,10 +378,9 @@
         <div class="atc-con-list">
             <div class="who">
                 <div class="who-list aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
-                    <p class="counter1 counter"><span>SINCE</span> <code class="counter1">2012</code></p>
+                    <p class="counter1 counter"><span>SINCE</span><code class="counter1">2012</code></p>
                     <div class="desc">
-                        2012년 이후로 국내 5K팀은<br>
-                        <span>꾸준히 활동</span>하고 있습니다.
+                        2012 이후로 국내 5K팀은 <br> <span>꾸준히 활동</span>하고 있습니다.
                     </div>
                 </div>
                 <div class="who-list aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">
@@ -394,7 +390,7 @@
                     </div>
                 </div>
                 <div class="who-list aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">
-                    <p class="counter"><span>전국</span>8<span>도</span> 77개 <span>도시</span></p>
+                    <p class="counter">8<span>도</span> 77개 <span>도시</span></p>
                     <div class="desc">
                         전국 곳곳 위치한 5K팀은 <br><span>77개 도시에서 활동하고 있습니다.</span>
                     </div>
@@ -402,7 +398,7 @@
                 <div class="who-list aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">
                     <p class="counter1 counter"> <code class="counter3">160</code><span>개국</span></p>
                     <div class="desc">
-                        해외 5K운동은 꾸준히 증가하고 있으며,<br>
+                        해외 5K운동은 꾸준히 증가하고 있고,<br>
                         <span>현재 160개국에서 함께하고 있습니다.</span>
                     </div>
                 </div>
@@ -421,18 +417,18 @@
             <div class="atc-con aos-init aos-animate pt40" data-aos="fade-up" data-aos-duration="1200">
                 <p class="text3">
                     우리의 따뜻한 발걸음인 5K운동은 해마다 더 많은 나라에서,<br>
-                    더 많은 사람들과 함께하고 있습니다.
+                    더 많은 사람들이 함께하고 있습니다.
                 </p>
             </div>
             <div class="atc-con aos-init aos-animate mt50" data-aos="fade-up" data-aos-duration="1200">
                 <img class="w100" src="../img/main/img_graph.png" alt="">
             </div>
         </div>
-        <div class="map" data-aos="fade-up" data-aos-duration="1200" >
-            <!-- <div class="m0auto space max-width pt100">
+        <div class="map" data-aos="fade-in" data-aos-duration="1200" >
+            <div class="m0auto space max-width pt100">
                 <div class="font-title text-left aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">세계의 My5K</div>
                 <div class="atc-con font-sub text1 text-left aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200">함께 걸어요 My5K는 전세계 160개국과 함께합니다.</div>
-            </div> -->
+            </div>
             <!-- <img src="../img/main/img_map.png" alt=""> -->
         </div>
         <div class="img-move02 pt66">
